--- a/css/styles.css
+++ b/css/styles.css
@@ -1,64 +1,15 @@
-﻿/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+﻿
+/* Home screen*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-@font-face
-{
-
-font-family: 'Merriweather Sans', sans-serif;
-src: url('../fonts/MerriweatherSans-Bold.ttf');
-}
-body {
-	line-height: 1;
-    background: #f2f2f2;
-}
-ol, ul {
-	list-style: none;
-}
-
-header {
-    z-index: 10;
-}
 h1 { 
     /*font-family: 'Merriweather', Arial, sans-serif; font-weight: 400; */
     font-family: 'Merriweather Sans', sans-serif; font-weight: 800;
     font-style:italic;
-}/*  
-    
-Normal 400
+}
 
-Grumpy wizards make toxic brew for the evil Queen and Jack.
-Bold 700
 
-Extra-Bold 800 Italic 
-    **/
-.menu {
+
+.homemenu {
     list-style-type:none;
     display:inline;
     font-family: 'Merriweather Sans', sans-serif; font-weight: 800;
@@ -66,22 +17,22 @@ Extra-Bold 800 Italic
     width:100%;
     text-align:center;
 }
-.menu li {
+
+.homemenu li {
     width: 100%;
     background: rgb(240, 240, 237);
-    /*border-bottom: 1px solid #333333;*/
-    box-shadow: 0 0 1px -1px #000000;
+    box-shadow: 0 0 5px #888;
+    -webkit-box-shadow:  0 0 3px #888;
 }
-.menu li span{
+
+.homemenu li span{
    font-size:12px;
    font-style:italic;
    text-transform: initial;
    margin-top: -8px;
-    display: block;
-
-   
+   display: block;
 }
-    .menu li .button-header {
+.homemenu li .headertext {
         position:relative;
         top:30%;
         display:block;
@@ -90,226 +41,41 @@ Extra-Bold 800 Italic
         margin:0 0 20px 0;
         width:100%;
         text-transform: uppercase;
-        
+        z-index:20;
     }
-.menu li:last-child
+.homemenu li:last-child
 {
     border:none;
 }
-.menu li:active {
+.homemenu li:active {
     width: 100%;
     background: #000;
 }
-.menu li a {
+.homemenu li a {
    color: #353943;
     text-decoration: NONE;
     position:relative;
     display:block;
     height:100%;
 }
- .menu li a:active {
+.homemenu li a:active {
      color: #E5A24D;
-   }
+}
 
-
-
-.header{
+.bar-title {
     background: #E9E9E9;
-    height: 27px;
-    width: 100%;
-    color: #fff;
-    z-index: 10;
-    -webkit-box-shadow: 0px 0px 2px 2px #CECECE;
-    position: relative;
+    z-index:10;    
 }
-
-.header-button{
-    position: absolute;
-    top: 0;
-    padding: 7px 5px;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    line-height: 1em;
-    z-index:10;
+.bar {
+    z-index:10;    
 }
-
-.header-button button{
-    pointer-events: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    min-width: 40px;
-    height: 30px;
-    line-height: 25px;
-    font-weight: bold;
-    font-size: 12px;
-    text-align: center;
-    color: #fff;
-    text-shadow: 0 -1px rgba(0,0,0,.6);
-    padding: 0 4px;
-    margin: 0;
-    text-decoration: none;
-    border-width: 2px 5px;
-    -webkit-border-image:  url(../img/backbutton.jpg) 4 10 4 10;
-    -moz-border-image: url(../img/backbutton.jpg) 4 10 4 10;
-    -ms-border-image: url(../img/backbutton.jpg) 4 10 4 10;
-    -o-border-image: url(../img/backbutton.jpg) 4 10 4 10;
-    background: transparent url(../img/backbutton.jpg) no-repeat;
-    -webkit-background-size: 0 0;
-    -moz-background-size: 0 0;
-    -ms-background-size: 0 0;
-    -o-background-size: 0 0;
-    background-size: 0 0;
-    z-index:10;
-}
-
-.header-button-icon button{
-    min-width: 0;
-    z-index:10;
-}
-
-.header-button-icon button img{
-    vertical-align: text-bottom;
-    z-index:10;
-}
-/*
-.header-button.tappable-active button{
-    -webkit-border-image: url(../img/button-active.png) 4 10 4 10;
-    -moz-border-image: url(../img/button-active.png) 4 10 4 10;
-    -ms-border-image: url(../img/button-active.png) 4 10 4 10;
-    -o-border-image: url(../img/button-active.png) 4 10 4 10;
-}
-*/
-.header-back-button button{
-    padding: 0 4px 0 0;
-    border-width: 2px 4px 2px 13px;
-    -webkit-border-image: url(../img/backbutton.jpg) 4 8 4 26;
-    -moz-border-image: url(../img/backbutton.jpg) 4 8 4 26;
-    -ms-border-image: url(../img/backbutton.jpg) 4 8 4 26;
-    -o-border-image: url(../img/backbutton.jpg) 4 8 4 26;
-    background-image: url(../img/backbutton.jpg);
-    z-index:10;
-}
-/*
-.header-back-button.tappable-active button{
-    -webkit-border-image: url(../img/back-button-active.png) 4 8 4 26;
-    -moz-border-image: url(../img/back-button-active.png) 4 8 4 26;
-    -ms-border-image: url(../img/back-button-active.png) 4 8 4 26;
-    -o-border-image: url(../img/back-button-active.png) 4 8 4 26;
-}
-*/
-.header-button-left{
-    left: 0;
-    z-index:10;
-}
-
-.header-button-right{
-    right: 0;
-    z-index:10;
-}
-
-.header h1{
-    padding: 0;
-    text-align: center;
-    font-size: 20px;
-    text-shadow: 0 -1px rgba(0,0,0,.4);
-    margin: 0;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    z-index:10;
-}
-
+    
 .content {
     /*padding: 5px 0px 0px 0px;
     margin: 2px 0px 0px 0px; */
     background: #f2f2f2;
     height: 100%;
 }
-
-.row {
-    margin: 0px 3px 0px 1px;
-    overflow:hidden;
-}
-
-a {
-    color: #353943;
-}
-
-    
-
-/* Home screen */
-
-.row .home-top {
-    background: #f2f2f2;
-    margin: 0;
-    padding-top: 0;
-    width: 100%;
-    height: 35px;
-}
-
-.row .left {
-    background: #93d7ec;
-    margin-bottom: 0;
-    float:left;
-    height: 40px;
-    width: 45px;
-    padding-top: 20px;
-    padding-left: 15px;
-    border-bottom: 1px solid #353943;
-}
-
-.row .right {
-    background: #93d7ec;
-    margin: 0;
-    padding-top: 25px;
-    padding-left: 15px;
-    float:left;
-    text-align:left;
-    height: 35px;
-    width: 240px;
-    border-bottom: 1px solid #353943;
-}
-
-.icon-sport-shoe {
-    background: transparent url("../img/iconbeast lite - png/sport-shoes.png");
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-}
-
-.icon-trophy {
-  background: url("../img/iconbeast lite - png/rank.png") no-repeat;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-}
-.icon-diary {
-  background: url("../img/iconbeast lite - png/diary.png") no-repeat;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-}
-.icon-settings {
-    background: url("../img/iconbeast lite - png/gear.png") no-repeat;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-}
-.icon-areas {
-    background: url("../img/iconbeast lite - png/dollar-sign.png") no-repeat;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-}
-
-
 
 /* Run screen */
 
@@ -456,4 +222,172 @@ p {
     width:100%;
     height:100%;
     top: 44px;
+}
+
+
+/* AREAS VIEW */
+.list li > a:active {
+    background-color: #D7D7D7;
+}
+
+.user {
+   color: rgb(212, 241, 0)!important;
+}
+.user .km-cnt.km .cnt-small {
+   color: black!important;
+}
+.user {
+   color: black!important;
+}
+
+.listName{
+    text-transform: uppercase;
+    font-size: 15px!important;
+    /*top: 9px;
+    left: 69px;
+    position: absolute;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;*/
+    height: 32px;
+    /*width: 190px;
+    z-index: 2;*/
+}
+
+.km-cnt{
+    position: absolute;
+    right: 50px;
+    top: -6px;
+    font-size: 43px!important;
+    letter-spacing: -1px;
+}
+.km-cnt.km{
+    position: absolute;
+    right: 50px;
+    top: 4px;
+    font-size: 33px!important;
+    letter-spacing: -1px;
+}
+.km-cnt.likers .cnt-small{
+    margin-left: 1px;
+    font-size: 11px;
+    color:#6b0a6f;
+    top: 26px;
+    right: 3px;
+    position: absolute;
+    
+}
+
+.km-cnt .cnt-small{
+    margin-left: 1px;
+    font-size: 10px;
+    color:#6b0a6f;
+    top: 31px;
+    right: 3px;
+    position: absolute;
+    
+}
+
+.level-number{
+   position: relative;
+width: 50px;
+text-align: center;
+color: #fff;
+font-size: 19px!important;
+font-weight: normal!important;
+top: -9px;
+}
+.level-number span{
+    font-size: 8px;
+}
+.user.pct{
+    position: absolute;
+    top: 30px;
+    left: 70px;
+    font-size: 23px;
+    color: black;
+    letter-spacing: -1px;
+}
+.user.pct .pctdesc{
+
+    font-size: 11px;
+}
+.user.pct .total{
+
+    font-size: 13px;
+     color:#6b0a6f;
+}
+
+
+.pie {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+}
+
+.pie .master {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 100%;
+}
+
+.pie .slice {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 100%;
+    clip: rect(0px, 50px, 50px, 25px);
+}
+  
+.pie .inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 100%;
+    clip: rect(0px, 25px, 50px, 0px);
+    }
+
+.pie .cover {
+    background: #fff;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    bottom: 5px;
+    right: 5px;
+    border-radius: 100%;
+}
+.blue .master {
+    background: #e9e9e9;
+}
+.blue .inner {
+    background: #f1675d;
+}
+.inner_circle {
+    padding-top: 10px;
+    text-align: center;
+}
+
+.maintext {
+    margin-left:10px;
+    font-family: 'Merriweather Sans', sans-serif; 
+    font-weight:800;
+    font-style: normal;
+    font-size: 18px;
+}
+
+.subtext {
+    margin-left:10px;
+    font-family: 'Merriweather Sans', sans-serif; 
+    font-weight:100;
+    font-style: normal;
+    font-size: 15px;
+    color: #929ba2;
 }
