--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,18 @@ h1 {
     font-style:italic;
 }
 
+.content {
+    position: absolute;
+}
 
+.table-view {
+    border: medium none;
+    margin: 0 !important;
+}
 
 .homemenu {
+    margin: 0;
+    padding: 0;
     list-style-type:none;
     display:inline;
     font-family: 'Merriweather Sans', sans-serif; font-weight: 800;
@@ -344,6 +353,19 @@ top: -9px;
     border-radius: 100%;
     clip: rect(0px, 50px, 50px, 25px);
 }
+
+.pie .slice1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 100%;
+    clip: rect(0px, 50px, 50px, 25px);
+    -moz-transform:rotate(180deg);
+    -o-transform:rotate(180deg);
+    transform:rotate(180deg);
+}
   
 .pie .inner {
     position: absolute;
@@ -370,6 +392,7 @@ top: -9px;
 .blue .inner {
     background: #f1675d;
 }
+
 .inner_circle {
     padding-top: 10px;
     text-align: center;
@@ -390,4 +413,18 @@ top: -9px;
     font-style: normal;
     font-size: 15px;
     color: #929ba2;
+}
+
+/* HISTORY VIEW */
+
+.circle
+{
+    float:left;
+    width:50px;
+    height:50px;
+    border-radius:25px;
+    color:#E5A24D;
+    padding-top:6px;
+    text-align:center;
+    background:#000;
 }
