--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,70 @@
     line-height: 26px;
     opacity: 0.4;
 }
+
+.margin-little {
+    margin: 4px;
+}
+
+.grid-menu-2items-row {
+    width: 100%;
+    height: 50%;
+    min-height: 100px;
+    margin: 0;
+    padding: 0;
+}
+
+.grid-menu-1items-row {
+    width: 100%;
+    height: 100%;
+    min-height: 100px;
+    margin: 0;
+    padding: 0;
+}
+
+.grid-menu-item {
+    width: 50%;
+    height: 100%;
+    min-width: 100px;
+    min-height: 100px;
+    margin: 0;
+    padding: 0;
+    border-left: 1px solid #CECECE !important;
+    border-bottom: 1px solid #CECECE !important;
+    font-size: 48px;
+    text-align: center;
+    opacity: 0.6;
+    border-top: 0px !important;
+}
+
+.grid-menu-item:first-child {
+    border-left: none !important;
+}
+
+.grid-menu-item i {
+    margin-top: 20px;
+    font-size: 36px;
+    opacity: 0.4;
+}
+
+.grid-menu-item-label {
+    margin-top: 3%;
+    font-size: 14px;
+}
+
+.grid-menu-list-item-left {
+    width: 90%;
+    opacity: 0.6;
+}
+
+.grid-menu-list-item-right {
+    position: absolute;
+    bottom: 0px;
+    top: 0px;
+    right: 16px;
+    width: 80px;
+    font-size: 20px;
+    opacity: 0.4;
+    text-align: right;
+    line-height: 44px;
+}
