--- a/css/style.css
+++ b/css/style.css
@@ -22,69 +22,119 @@
     opacity: 0.4;
 }
 
-.margin-little {
+.list__item a {
+    position: relative;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+}
+
+.timer {
+    background: #d54136;
+    padding: 4px;
+    height: 64px;
+    text-align: center;
+    border-top: 1px solid #fff;
+    border-bottom: 2px solid #fff;
+}
+
+.timer h1 {
+    font-size: 30px;
+    color: #fff;
+    display: inline;
+}
+.timer p {
+    display: inline;
+    color: #A81307;
+}
+
+.timer-text {
+  display: inline-block;
+  padding: 7px;
+  line-height: 35px;
+}
+
+
+.vertical-line{
+    width: 1px;
+    background-color: #A81307;
+    height: 39px;
+    display: inline-block;
+    margin-left: 35px;
+    margin-right: 35px;
+}
+
+.km-container {     
     margin: 4px;
 }
 
-.grid-menu-2items-row {
-    width: 100%;
-    height: 50%;
-    min-height: 100px;
+.km-container .box {
+    height: 140px;
+    padding-top: 6px;
+    /* background: #161411; */
+    margin-bottom: 4px;
+    /* color: #375D81; */
+    border-bottom: 1px solid #fff;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.km-headline {
+    line-height: 10px;
+    padding-top: 19px;
+}
+
+.km-headline h1, .km-headline p {
+    display: inline;
+    line-height: 35px;
+}
+
+.km-headline h1 {
+    font-size: 60px;
+    padding-left: 115px;
+}
+
+.km-headline p {
     margin: 0;
+    padding-left: 5px;
+}
+
+.km-headline p {
     padding: 0;
 }
 
-.grid-menu-1items-row {
-    width: 100%;
-    height: 100%;
-    min-height: 100px;
-    margin: 0;
-    padding: 0;
+.km-headline .secondary {
+    margin: 0px 2px 0px 2px;
+    color: #375D81;
+    font-weight:700;
 }
 
-.grid-menu-item {
-    width: 50%;
-    height: 100%;
-    min-width: 100px;
-    min-height: 100px;
-    margin: 0;
-    padding: 0;
-    border-left: 1px solid #CECECE !important;
-    border-bottom: 1px solid #CECECE !important;
-    font-size: 48px;
-    text-align: center;
-    opacity: 0.6;
-    border-top: 0px !important;
+.area-name {
+    padding-left: 10px;
+    position:relative;
+    margin-bottom: 10px;
 }
-
-.grid-menu-item:first-child {
-    border-left: none !important;
+.area-name p, .area-name i {
+    display: inline;
+    font-size: 16px;
 }
-
-.grid-menu-item i {
-    margin-top: 20px;
-    font-size: 36px;
-    opacity: 0.4;
-}
-
-.grid-menu-item-label {
-    margin-top: 3%;
+.time-text p, .time-text i {
+    display: inline;
     font-size: 14px;
 }
 
-.grid-menu-list-item-left {
-    width: 90%;
-    opacity: 0.6;
+.custom-icon {
+  color : #375D81;
 }
 
-.grid-menu-list-item-right {
-    position: absolute;
-    bottom: 0px;
-    top: 0px;
-    right: 16px;
-    width: 80px;
-    font-size: 20px;
-    opacity: 0.4;
-    text-align: right;
-    line-height: 44px;
+#stop-reset {
+    text-transform:uppercase;
+    font: 30px "Helvetica-neue";
 }
+
+#start-pause {
+    text-transform:uppercase;
+    font: 30px "Helvetica-neue";
+}
+
+
