--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@
     text-decoration: none;
 }
 
+.button {
+    width: 49%;
+}
+
+
 .timer {
     background: #d54136;
     padding: 4px;
@@ -71,11 +76,9 @@
 .km-container .box {
     height: 140px;
     padding-top: 6px;
-    /* background: #161411; */
     margin-bottom: 4px;
-    /* color: #375D81; */
     border-bottom: 1px solid #fff;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -91,7 +94,7 @@
 
 .km-headline h1 {
     font-size: 60px;
-    padding-left: 115px;
+    padding-left: 100px;
 }
 
 .km-headline p {
